fix main.ipynb 1

--- a/main.ipynb
+++ b/main.ipynb
@@ -34,7 +34,7 @@
         "\n",
         "    for participant in df[participant_col].unique():\n",
         "        participant_data = df[df[participant_col] == participant]\n",
-        "        plt.figure(figsize=(10, 6))\n",
+        "        plt.figure(figsize=(10, 4))\n",
         "\n",
         "        for session in participant_data['independent_session'].unique():\n",
         "            session_data = participant_data[participant_data['independent_session'] == session]\n",
@@ -52,7 +52,7 @@
         "        plt.grid(color='grey', linestyle='--', linewidth=0.7, alpha=0.7)\n",
         "\n",
         "        handles, labels = plt.gca().get_legend_handles_labels()\n",
-        "        unique_labels = list(set(label.split('_')[0] for label in labels))  \n",
+        "        unique_labels = list(df[condition_col].unique())  # 修正\n",
         "        by_label = dict(zip(labels, handles))\n",
         "        plt.legend([by_label[label] for label in by_label if label.split('_')[0] in unique_labels],\n",
         "                   unique_labels, title=condition_col, fontsize=14, title_fontsize=16)\n",
