fix main.ipynb 2

--- a/main.ipynb
+++ b/main.ipynb
@@ -27,10 +27,15 @@
         "    return df, dependent_variable_col, condition_col, participant_col, session_col\n",
         "\n",
         "def plot_abab_patient_data(csv_file):\n",
+        "    sns.set(\n",
+        "        font='IPAexGothic',\n",
+        "        palette='Set2',\n",
+        "        context='paper'\n",
+        "    )\n",
+        "    \n",
         "    df, dependent_variable_col, condition_col, participant_col, session_col = load_and_preprocess_data(csv_file)\n",
         "    \n",
-        "    palette = sns.color_palette(\"Set2\", n_colors=2)\n",
-        "    color_map = {condition: palette[i] for i, condition in enumerate(df[condition_col].unique())}\n",
+        "    color_map = {condition: sns.color_palette(\"Set2\")[i] for i, condition in enumerate(df[condition_col].unique())}\n",
         "\n",
         "    for participant in df[participant_col].unique():\n",
         "        participant_data = df[df[participant_col] == participant]\n",
@@ -49,10 +54,17 @@
         "        plt.xlabel(session_col, fontsize=16)\n",
         "        plt.ylabel(dependent_variable_col, fontsize=16)\n",
         "        plt.tick_params(axis='both', labelsize=14)\n",
+        "        \n",
         "        plt.grid(color='grey', linestyle='--', linewidth=0.7, alpha=0.7)\n",
         "\n",
+        "        plt.xticks(rotation=45)  \n",
+        "        plt.yticks(fontsize=12)\n",
+        "        \n",
+        "        plt.gca().xaxis.set_major_locator(plt.MaxNLocator(integer=True))  \n",
+        "        plt.gca().yaxis.set_major_locator(plt.MaxNLocator(nbins=8))  \n",
+        "\n",
         "        handles, labels = plt.gca().get_legend_handles_labels()\n",
-        "        unique_labels = list(df[condition_col].unique())  # 修正\n",
+        "        unique_labels = list(df[condition_col].unique())\n",
         "        by_label = dict(zip(labels, handles))\n",
         "        plt.legend([by_label[label] for label in by_label if label.split('_')[0] in unique_labels],\n",
         "                   unique_labels, title=condition_col, fontsize=14, title_fontsize=16)\n",
