--- a/main.ipynb
+++ b/main.ipynb
@@ -24,9 +24,10 @@
         "\n",
         "    df['condition_change'] = (df[condition_col] != df[condition_col].shift()).cumsum()\n",
         "    df['independent_session'] = df[condition_col] + '_' + df['condition_change'].astype(str)\n",
+        "    \n",
         "    return df, dependent_variable_col, condition_col, participant_col, session_col\n",
         "\n",
-        "def plot_abab_patient_data(csv_file):\n",
+        "def plot_abc_bc_patient_data(csv_file):\n",
         "    sns.set(\n",
         "        font='IPAexGothic',\n",
         "        palette='Set2',\n",
@@ -73,8 +74,7 @@
         "        plt.show()\n",
         "\n",
         "# 実際のCSVファイル名を指定してください。\n",
-        "plot_abab_patient_data('abab.csv')\n",
-        "\n",
+        "plot_abc_bc_patient_data('abab.csv')\n",
         "\n",
         "\n",
         "\n"
