add picture etc

--- a/main.ipynb
+++ b/main.ipynb
@@ -73,8 +73,8 @@
         "        plt.tight_layout()\n",
         "        plt.show()\n",
         "\n",
-        "# 実際のCSVファイル名を指定してください。\n",
-        "plot_abc_bc_patient_data('abab.csv')\n",
+        "# 以下の「hoge.csv」の場所にて、CSVファイルの名前を書き換えてください。\n",
+        "plot_abc_bc_patient_data('hoge.csv')\n",
         "\n",
         "\n",
         "\n"
