--- a/main.ipynb
+++ b/main.ipynb
@@ -74,10 +74,7 @@
         "        plt.show()\n",
         "\n",
         "# 以下の「hoge.csv」の場所にて、CSVファイルの名前を書き換えてください。\n",
-        "plot_abc_bc_patient_data('hoge.csv')\n",
-        "\n",
-        "\n",
-        "\n"
+        "plot_abc_bc_patient_data('hoge.csv')\n"
       ]
     }
   ],
