fix ipynb and pic

--- a/main.ipynb
+++ b/main.ipynb
@@ -27,7 +27,7 @@
         "    \n",
         "    return df, dependent_variable_col, condition_col, participant_col, session_col\n",
         "\n",
-        "def plot_abc_bc_patient_data(csv_file):\n",
+        "def plot_patient_data(csv_file):\n",
         "    sns.set(\n",
         "        font='IPAexGothic',\n",
         "        palette='Set2',\n",
@@ -74,7 +74,7 @@
         "        plt.show()\n",
         "\n",
         "# 以下の「hoge.csv」の場所にて、CSVファイルの名前を書き換えてください。\n",
-        "plot_abc_bc_patient_data('hoge.csv')\n"
+        "plot_patient_data('hoge.csv')\n"
       ]
     }
   ],
